landingpage-deployment.yaml
apiVersion: apps/v1 
# for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: landingpage-deployment
spec:
  selector:
    matchLabels:
      app: landingpage
  replicas: 2        
  template:          
    metadata:
# unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
# generated from the deployment name
      labels:
        app: landingpage
    spec:
      containers:
      - name: landingpage
        image: ibangj/landingpage:1-master-staging
        ports:
        - containerPort: 8080
