sosialmedia-stg-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sosialmedia-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
    - host: sosialmedia-stg.getarjati.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sosialmedia
                port:
                  number: 8080
